change notebook for pipeline local run
update notebook

update notebook

update notebook

update notebook

--- a/sdk/jobs/pipelines/1b_pipeline_with_python_function_components/pipeline_with_python_function_components.ipynb
+++ b/sdk/jobs/pipelines/1b_pipeline_with_python_function_components/pipeline_with_python_function_components.ipynb
@@ -42,7 +42,8 @@
     "#import required libraries\n",
     "from azure.identity import InteractiveBrowserCredential\n",
     "from azure.ml import MLClient, dsl\n",
-    "from azure.ml.entities import JobInput"
+    "from azure.ml.entities import JobInput\n",
+    "import piprunpkg"
    ]
   },
   {
@@ -173,7 +174,7 @@
     "\n",
     "from src.dsl_components import train_model, score_data, eval_model\n",
     "\n",
-    "help(train_model)"
+    "print(train_model)"
    ]
   },
   {
@@ -221,6 +222,8 @@
     "        training_data=input_data, max_epochs=5, learning_rate=learning_rate\n",
     "    )\n",
     "\n",
+    "    print(train_with_sample_data)\n",
+    "\n",
     "    score_with_sample_data = score_data(\n",
     "        model_input=train_with_sample_data.outputs.model_output, test_data=test_data\n",
     "    )\n",
@@ -234,10 +237,34 @@
     "    }\n",
     "\n",
     "pipeline = pipeline_with_python_function_components(\n",
-    "    input_data=JobInput(path=\"wasbs://demo@dprepdata.blob.core.windows.net/Titanic.csv\", type=\"uri_file\"), \n",
-    "    test_data=JobInput(path=\"wasbs://demo@dprepdata.blob.core.windows.net/Titanic.csv\", type=\"uri_file\"), \n",
+    "    input_data=JobInput(path=\"./data/Titanic.csv\", type=\"uri_file\"), \n",
+    "    test_data=JobInput(path=\"./data/Titanic.csv\", type=\"uri_file\"), \n",
     "    learning_rate=0.1\n",
-    ")"
+    ")\n",
+    "\n",
+    "print(pipeline)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2 Run pipeline in local"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from piprunpkg import run_pipeline\n",
+    "import logging\n",
+    "import sys\n",
+    "logging.basicConfig(stream=sys.stdout, level=logging.DEBUG)\n",
+    "print(os.getcwd())\n",
+    "output_root_dir = \"./local-run-output\"\n",
+    "run_pipeline(output_root_dir=output_root_dir, pipeline_job=pipeline)"
    ]
   },
   {
@@ -300,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.1"
   },
   "orig_nbformat": 4
  },
