--- a/sdk/jobs/pipelines/1d_pipeline_with_non_python_components/pipeline_with_non_python_components.ipynb
+++ b/sdk/jobs/pipelines/1d_pipeline_with_non_python_components/pipeline_with_non_python_components.ipynb
@@ -42,7 +42,8 @@
     "#import required libraries\n",
     "from azure.ml import MLClient, dsl, command\n",
     "from azure.ml.entities import JobInput, JobOutput, Environment\n",
-    "from azure.ml.entities._assets.environment import BuildContext"
+    "from azure.ml.entities._assets.environment import BuildContext\n",
+    "import piprunpkg"
    ]
   },
   {
@@ -242,7 +243,29 @@
     "        \"output_file\": show_data_node.outputs.output_folder\n",
     "    }\n",
     "\n",
-    "pipeline = pipeline_with_non_python_components(download_url, file_name)"
+    "pipeline = pipeline_with_non_python_components(download_url, file_name)\n",
+    "print(pipeline)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2 Run pipeline in local"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from piprunpkg import run_pipeline, CuratedEnvironmentDefaultRunMode\n",
+    "import logging\n",
+    "import sys\n",
+    "logging.basicConfig(stream=sys.stdout, level=logging.INFO)\n",
+    "output_root_dir = \"./local-run-output\"\n",
+    "run_pipeline(output_root_dir=output_root_dir, pipeline_job=pipeline, curated_env_default_run_mode=CuratedEnvironmentDefaultRunMode.CONTAINER)"
    ]
   },
   {
@@ -260,7 +283,8 @@
    "source": [
     "\n",
     "pipeline_job = ml_client.jobs.create_or_update(pipeline, experiment_name=\"pipeline_samples\")\n",
-    "pipeline_job"
+    "pipeline_job\n",
+    "ml_client.jobs._runs_operations._operation.add"
    ]
   },
   {
@@ -304,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.1"
   },
   "orig_nbformat": 4
  },
