--- a/sdk/jobs/pipelines/2c_nyc_taxi_data_regression/nyc_taxi_data_regression.ipynb
+++ b/sdk/jobs/pipelines/2c_nyc_taxi_data_regression/nyc_taxi_data_regression.ipynb
@@ -42,7 +42,8 @@
     "#import required libraries\n",
     "from azure.ml import MLClient, dsl\n",
     "from azure.ml.entities import JobInput, JobOutput, load_component\n",
-    "from azure.ml._constants import AssetTypes"
+    "from azure.ml._constants import AssetTypes\n",
+    "import piprunpkg"
    ]
   },
   {
@@ -202,7 +203,30 @@
     "pipeline.outputs.pipeline_job_trained_model = JobOutput(path=\"/trained-model\", mode=\"rw_mount\")\n",
     "pipeline.outputs.pipeline_job_test_data = JobOutput(path=\"/test_data\", mode=\"rw_mount\")\n",
     "pipeline.outputs.pipeline_job_predictions = JobOutput(path=\"/predictions\", mode=\"rw_mount\")\n",
-    "pipeline.outputs.pipeline_job_score_report = JobOutput(path=\"/report\", mode=\"rw_mount\")"
+    "pipeline.outputs.pipeline_job_score_report = JobOutput(path=\"/report\", mode=\"rw_mount\")\n",
+    "\n",
+    "print(pipeline)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3 Run pipeline in local"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from piprunpkg import run_pipeline, CuratedEnvironmentDefaultRunMode\n",
+    "import logging\n",
+    "import sys\n",
+    "logging.basicConfig(stream=sys.stdout, level=logging.INFO)\n",
+    "output_root_dir = \"./local-run-output\"\n",
+    "run_pipeline(output_root_dir=output_root_dir, pipeline_job=pipeline, curated_env_default_run_mode=CuratedEnvironmentDefaultRunMode.CONTAINER)"
    ]
   },
   {
@@ -264,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.1"
   },
   "orig_nbformat": 4
  },
