--- a/sdk/jobs/pipelines/1a_pipeline_with_components_from_yaml/pipeline_with_components_from_yaml.ipynb
+++ b/sdk/jobs/pipelines/1a_pipeline_with_components_from_yaml/pipeline_with_components_from_yaml.ipynb
@@ -42,7 +42,8 @@
     "# Import required libraries\n",
     "from azure.ml import MLClient, dsl\n",
     "from azure.ml.entities import JobInput, load_component\n",
-    "from azure.ml._constants import AssetTypes"
+    "from azure.ml._constants import AssetTypes\n",
+    "import piprunpkg"
    ]
   },
   {
@@ -158,6 +159,7 @@
    "outputs": [],
    "source": [
     "parent_dir = '.'\n",
+    "#parent_dir = \"D:\\\\practice\\\\azureml-examples\\\\sdk\\\\jobs\\\\pipelines\\\\1a_pipeline_with_components_from_yaml\"\n",
     "train_model = load_component(yaml_file=parent_dir + \"/train_model.yml\")\n",
     "score_data = load_component(yaml_file=parent_dir + \"/score_data.yml\")\n",
     "eval_model = load_component(yaml_file=parent_dir + \"/eval_model.yml\")"
@@ -252,13 +254,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2 Run pipeline in local"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Inspect built pipeline\n",
-    "print(pipeline)"
+    "print(pipeline)\n",
+    "import logging\n",
+    "import sys\n",
+    "logging.basicConfig(stream=sys.stdout, level=logging.DEBUG)\n",
+    "from piprunpkg import run_pipeline, CuratedEnvironmentDefaultRunMode\n",
+    "print(os.getcwd())\n",
+    "output_root_dir = \"./local-run-output/notebook_1a_native\"\n",
+    "run_pipeline(output_root_dir=output_root_dir, pipeline_job=pipeline, curated_env_default_run_mode=CuratedEnvironmentDefaultRunMode.CONTAINER)"
    ]
   },
   {
@@ -320,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.1"
   },
   "orig_nbformat": 4
  },
